docs/api/qiskit/0.29/qiskit.circuit.library.IGate.mdx
---
title: IGate (v0.29)
description: API reference for qiskit.circuit.library.IGate in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.IGate
---

# IGate

<Class id="qiskit.circuit.library.IGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/i.py" signature="IGate(label=None)" modifiers="class">
  Bases: `qiskit.circuit.gate.Gate`

  Identity gate.

  Identity gate corresponds to a single-qubit gate wait cycle, and should not be optimized or unrolled (it is an opaque gate).

  **Matrix Representation:**

$$
\begin{split}I = \begin{pmatrix}
1 & 0 \\
0 & 1
\end{pmatrix}\end{split}
$$

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ I ├
       └───┘
  ```

  Create new Identity gate.

  ## Methods Defined Here

  <span id="qiskit-circuit-library-igate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.IGate.inverse" signature="IGate.inverse()">
    Invert this gate.
  </Function>

  ## Attributes

  ### decompositions

  <Attribute id="qiskit.circuit.library.IGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.IGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.IGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.IGate.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.IGate.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.IGate.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

